welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:7: error: not found: value faslse
    return faslse
           ^